# pickET

./: .coverage  .gitignore  404.html  README.md  compare_segs.py  convert_ndjson_to_np.py  cupy_test.py  deprecated_s1.py  false_positives.ndjson  generate_ndjson_ground_truth_annotations.py  h5py_test.py  index.html  mkdocs.yml  plots_to_discuss.py  pyproject.toml  requirements.txt  run_milopyp.py  s1.py  s1_params_ffts_example.yaml  s1_v2_under_construction.py  s2.py  see_segmentations.py  sitemap.xml  temp.py  toy.py
accessories/: convert_h5_to_mrc_for_zenodo.py  convert_milopyp_preds_to_yaml.py  extract_subtomograms.py  get_numbers_on_particlewise_recall.py  make_ndjson_gt_lugan.py  numpy_to_mrc.py  offset_correct_pred_centroids_and_convert_to_csv.py  rename_annot_f.sh  see_centroids.py  see_segmentations.py  slack_bot_test.py
assessments/: assessment_utils.py  centroid_assessment.py  deprecated_centroid_assessment_hungarian.py  particle_wise_recall.py  tomotwin_particles.yaml
assets/: clustering.py  feature_extraction.py  particle_extraction.py  preprocessing.py  segmentation_io.py  utils.py
clean_run_params/: selected_workflows_for_milopyp_comparison.yaml
complete_side_scripts/: get_median_from_results.py
css/: figure_caption.css
docs/: evaluations.md  how_i_ran_milopyp.md  how_we_ran_milopyp.md  index.md  input_for_s1.md  input_for_s2.md  installation.md  obtaining_particle_cluster_id.md  outputs.md  preproc_gt.md  running_s1.md  running_s2.md  usage_instructions.md  visualizing_segmentations.md
docs_deprecated/: README.md  outputs.md  running_s1.md  (+2 more)
(+304 files in other folders)
